force-app/main/default/objects/SR_Notification__e/SR_Notification__e.object-meta.xml
<CustomObject>
    <label>SR Notification</label>
    <pluralLabel>SR Notifications</pluralLabel>
</CustomObject>