force-app/main/default/objects/SR_Notification__e/fields/Service_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Details__c</fullName>
    <label>Service Request Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>