force-app/main/default/objects/SR_Notification__e/fields/Service_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Id__c</fullName>
    <label>Service Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>