force-app/main/default/objects/SR_Notification__e/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>